# retail-insight-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  analyze_new_thresholds.py  analyze_thresholds.py  clean_store_legacy.py  experiment_advanced.py  experiment_anomalies.py  experiment_comprehensive.py  experiment_finance_forecast.py  generate_pov_chart.py  human_vision_pov.html  package-lock.json  package.json  populate_finance_forecast.py  pyproject.toml  query_schema.py  refactor.py  refactor_dashboard.py  vercel.json
.agents/: AGENTS.md
dashboard/: README.md  package-lock.json  package.json
data/: context_pack.json  context_pack.md
docs/: AGENT_RUNTIME_DESIGN.md  AGENT_SYSTEM_DESIGN.md  AGENT_SYSTEM_OVERVIEW.md  AGENT_SYSTEM_STUDY_NOTES.md  AGENT_SYSTEM_TECHNICAL_WALKTHROUGH.md  IMPROVEMENT_PLAN.md  PRD.md  REDESIGN_PLAN.md  UI_PLAN.md  ai-projects-redesign-report.html  case-study-city0-two-runs.md  dfs-vs-retail-rca-design-comparison.md  simulation-city0-dragon-boat-drop.md
rca/: __init__.py  agents.py  analytics.py  audits.py  bench.py  cli.py  config.py  context.py  database.py  evaluator.py  evidence.py  graph.py  llm.py  mcp_server.py  memory.py  obs.py  outcomes.py  profiles.py  replay.py  report.py  reviewer.py  runlog.py  schema.sql  signals.py  simulate.py  state.py  stubclient.py  tools.py
results/: city0_all_flash.json
scripts/: analyze_sales_signals.py  backfill_report_html.py  build_dashboard.py  export_ui_data.py  ingest_daily_tables.py  run_rca_agent.py  run_rca_benchmarks.py  run_rca_manager.py  show_runs.py  validate_daily_tables.py
tests/: test_agent.py  test_agents.py  test_audits.py  test_benchmarks.py  test_context.py  test_database.py  test_evaluator.py  test_evidence.py  test_graph_integration.py  test_multi_agent.py  test_outcomes.py  test_query.py  test_rca_tools.py  test_render.py  test_replay.py  test_report.py  test_reviewer.py  test_run_logging.py  test_runlog.py  test_signals.py  test_simulate.py  (+2 more)
(+332 files in other folders)
