[project]
name = "retail-insight-agent"
version = "0.1.0"
description = "Phase 1 retail evidence ingestion into local DuckDB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.4",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rca_foundry"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
