[project]
name = "retail-insight-agent"
version = "0.1.0"
description = "Retail insight agent — city-aggregate sales RCA backed by Supabase"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=8.0.0",
    "fastmcp>=2.0",
    "langfuse>=2.0",
    "langgraph>=0.3",
    "markdown>=3.8.2",
    "openai>=2.8.1",
    "numpy>=1.26",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.4",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "supabase>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rca"]

[project.scripts]
rca = "rca.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
